prettier of apex

--- a/force-app/main/default/classes/DriverRatingViewServerController.cls
+++ b/force-app/main/default/classes/DriverRatingViewServerController.cls
@@ -1,13 +1,11 @@
 public class DriverRatingViewServerController {
- @AuraEnabled
-    public static List<Driver__c> getDriversRatingServerMethod(){
-        return [SELECT 
-                Full_Name__c, 
-                Hat_Tricks__c, 
-                Age__c, 
-                Is_Qualified__c
-                FROM Driver__c
-                ORDER BY Hat_Tricks__c DESC
-                LIMIT 2];
-    }
+  @AuraEnabled
+  public static List<Driver__c> getDriversRatingServerMethod() {
+    return [
+      SELECT Id, Full_Name__c, Hat_Tricks__c, Age__c, Is_Qualified__c
+      FROM Driver__c
+      ORDER BY Hat_Tricks__c DESC
+      LIMIT 5
+    ];
+  }
 }
